Fix Dark mode on contact info

--- a/src/app/components/contact-info/contact-info.component.css
+++ b/src/app/components/contact-info/contact-info.component.css
@@ -9,7 +9,7 @@
     font-size: 28px;
     font-weight: bold;
     margin-bottom: 30px;
-    color: #3f51b5;
+    color: var(--accent-colour);
   }
   
   .contact-grid {
@@ -23,7 +23,7 @@
     flex-direction: column;
     align-items: center;
     padding: 20px;
-    background: #ffffff;
+    background: var(--secondary-bg);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     transition: transform 0.3s ease-in-out;
@@ -34,13 +34,15 @@
   }
   
   .contact-icon {
-    font-size: 32px;
-    color: #3f51b5;
+    font-size: 24px;
+    color: var(--accent-colour);
+    margin: auto;
+    padding: 2px;
   }
   
   a {
     text-decoration: none;
-    color: #3f51b5;
+    color: var(--accent-colour);
     font-weight: bold;
     font-size: 16px;
   }
@@ -49,3 +51,6 @@
     text-decoration: underline;
   }
   
+  .mat-card-header-text {
+    color: var(--primary-text);
+  }
