--- a/src/styles.css
+++ b/src/styles.css
@@ -9,12 +9,14 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     --primary-bg: #ffffff;
     --primary-text: #000000;
     --secondary-bg: #f5f5f5;
+    --accent-colour:  #3f51b5;
   }
   
   .dark-theme {
     --primary-bg: #121212;
     --primary-text: #ffffff;
     --secondary-bg: #1e1e1e;
+    --accent-colour:  #3f51b5;
   }
   
   body {
